//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  yearOfBirth Int [not null]
  password String [not null]
  telephoneNumber String [not null]
  locationKnown Boolean [not null, default: false]
  longitude Float [not null, default: 0]
  latitude Float [not null, default: 0]
  refreshToken String
  userType UserType [not null, default: 'USER']
  assistant Assistant
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  BidCreated Bid [not null]
  BidAssisted Bid [not null]
  assistantId String
  Achievement Achievement [not null]
}

Table Assistant {
  id String [pk]
  wallet String
  numberOfHelps Int [not null, default: 0]
  tips Int [not null, default: 0]
  achievement String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  User User [not null]
}

Table Bid {
  id String [pk]
  createdBy User [not null]
  assistedBy User
  dateOfConfirmation DateTime
  status BidStatus [not null, default: 'OPEN']
  description String [not null]
  typeOfProblem TypeOfProblem [not null]
  tipAmount Int [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  createdUserId String [not null]
  assistedUserId String
}

Table Achievement {
  id String [pk]
  createdBy User [not null]
  contractAddress String [not null]
  contractName String [not null]
  name String [not null]
  description String [not null]
  level Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [not null]
}

Enum TypeOfProblem {
  PC
  MOBILE
  PRINTER
  OTHER
}

Enum BidStatus {
  OPEN
  ASSIGNED
  CLOSED
}

Enum UserType {
  USER
  ASSISTANT
  ADMIN
}

Enum AchievementEnum {
  GOOD_SAMARIAN
  TETA_HELPER
}

Ref: User.assistantId > Assistant.id

Ref: Bid.createdUserId > User.id

Ref: Bid.assistedUserId > User.id

Ref: Achievement.userId > User.id